infra/k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: syncscript-redis
  namespace: syncscript
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: syncscript-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncscript-redis
  namespace: syncscript
spec:
  serviceName: syncscript-redis
  replicas: 1
  selector:
    matchLabels:
      app: syncscript-redis
  template:
    metadata:
      labels:
        app: syncscript-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args:
            - redis-server
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: redis-data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
